Added enable flag

--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ sass:
     sass_dir: assets/css
     #style: compressed
 
+enabled: true
 countdown_date: April 30, 2022 14:30:00 GMT+10:00
 start_time: 2:30 PM
 end_time: 10:00 PM
