Updating mobile style

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ markdown: kramdown
 
 sass:
     sass_dir: assets/css
-    #style: compressed
+    style: compressed
 
 enabled: false
 countdown_date: April 30, 2022 14:30:00 GMT+10:00
