--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
 lang: en-AU
 title: Steph & Matt
-description: Stephanie Li and Matthew Pomaroff's WEdding
+description: Stephanie Li and Matthew Pomaroff's Wedding
 baseurl: ""
-url: "https://pomaroff.github.io/" # the base hostname & protocol for your site
+url: "https://stephandmatt.info/"
 
 # Build settings
 markdown: kramdown
