--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ sass:
     sass_dir: assets/css
     style: compressed
 
-enabled: false
+enabled: true
 
 rsvp_date: 20.03.2022
 rsvp_post: https://smartforms.dev/submit/618f94887a195017922da888
