--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ sass:
 
 enabled: true
 
+rsvp_enabled: false
 rsvp_date: 20.03.2022
 rsvp_post: https://smartforms.dev/submit/618f94887a195017922da888
 rsvp_captcha: 6Lcc2C8dAAAAAGPt2EHyeRo5AvfLD5lOK4uP5sWX
@@ -22,4 +23,5 @@ gift_registry: https://www.myregistry.com/wedding-website/stephanie-li-and-matth
 
 countdown_date: April 30, 2022 15:00:00 GMT+10:00
 start_time: 3:00 PM
+reception_start_time: 5:30 PM
 end_time: 10:00 PM
